statum-macros/tests/ui/invalid_machine_wrong_generic.stderr
error: Error: machine `Machine` uses `S: Clone` as its state generic, but the `#[state]` enum in this module is `MachineState`.
       Found: `struct Machine<S: Clone> { ... }`
       Expected: `struct Machine<MachineState> { ... }`
       Fix: declare `Machine<MachineState>`.
  --> tests/ui/invalid_machine_wrong_generic.rs:20:16
   |
20 | struct Machine<S: Clone> {
   |                ^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_machine_wrong_generic.rs:22:2
   |
22 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_machine_wrong_generic.rs`
